--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -215,7 +215,7 @@
 			<false/>
 		</dict>
 		<key>ig-platform-id</key>
-		<string>0x191b0000</string>
+		<string>0x19160000</string>
 	</dict>
 	<key>KernelAndKextPatches</key>
 	<dict>
